# nn4psych

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  analysis.py  analyze_compiled.py  analyze_hyperparams.py  analyze_hyperparams_preset.py  analyze_normative.py  analyze_rnn.py  analyze_rnn_fp.py  bayesian_models  bayesian_models.py  behav_figures.py  compile.py  config.py  context_bandits.py  environment.yml  extract_nassar_trial_data.py  fixedpt_analysis.py  get_behavior.py  inspect_nassar_data.py  main_healthy.py  main_rnn_with_context.py  nassarfig6.py  pretrain_rnn_with_context.py  pretrain_rnn_with_heli.py  pretrain_rnn_with_heli_server.py  pretrain_rnn_with_heli_v1.py  pretrain_rnn_with_heli_v2.py  pretrain_rnn_with_heli_v3.py  pretrain_rnn_with_heli_v4.py  pt_rnn.py  pt_rnn_context.py  pyem_models.py  pyproject.toml  pytest.ini  readme.txt  requirements.txt  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
archive/: README.md  code_figures_behaviour  readme.txt
archive/bayesian_legacy/: NUMPYRO_GUIDE.md  README.md  __init__.py  bayesian_models.py  visualization.py
archive/bayesian_pymc/: README.md  fit_bayesian_pyem.py  fit_bayesian_pymc.py  pyem_models.py
archive/legacy_analysis/: analyze_hyperparams.py  analyze_hyperparams_gamma.py  analyze_hyperparams_rollout.py  analyze_hyperparams_scale.py  analyze_rnn_fp.py  compile.py
archive/legacy_scripts/: get_behavior.py  inspect_raw_nassar_data.py  pretrain_rnn_with_heli_v1.py
archive/normative_model/: tasks.py
archive/toy/: model.py  task.py
archive/v0/: context_bandits.py
archive/v1/: main.py
archive/v2/: pt_rnn_context_td.py
bayesian/: model_comparison.py  numpyro_models.py
cluster/: 09a_param_recovery_smoke.slurm  09b_fit_human_subjects.slurm  09c_aggregate_human_fits.slurm  99_push_results.slurm  batch_fit_bayesian.py  environment_cluster.yml  run_circuit_ensemble.sh  run_n_latent_sweep.sh  run_n_latent_sweep_masked.sh  run_per_context_fits.sh  run_per_context_one.slurm  run_phase4_bayesian.sh  setup_env.sh  submit_one.sh
cluster/logs/: circuit_ensemble_53621143.err  circuit_ensemble_53621143.out  circuit_ensemble_53621640.err  circuit_ensemble_53621640.out  circuit_ensemble_53704673.err  circuit_ensemble_53704673.out  circuit_ensemble_53754977.err  circuit_ensemble_53754977.out  circuit_ensemble_53786858.out  circuit_ensemble_53808753.out  circuit_ensemble_54114103.err  circuit_ensemble_54114103.out  circuit_ensemble_54148075.out  circuit_ensemble_54923593.err  circuit_ensemble_54923593.out  circuit_ensemble_54923594.err  circuit_ensemble_54923594.out  circuit_ensemble_54923595.out  circuit_ensemble_54923597.out  gpu_stats_54114103.csv  gpu_stats_54148075.csv  gpu_stats_54923593.csv  gpu_stats_54923594.csv  gpu_stats_54923595.csv  gpu_stats_54923597.csv  n_latent_sweep_jobs.txt  n_latent_sweep_masked_jobs.txt  per_context_jobs.txt
data/: README.md
data/fig2_values/: gamma_area.pickle  preset_area.pickle  rollout_area.pickle  scale_area.pickle
data/nassar2021/: slidingWindowFits_model_23-Nov-2021.mat
docs/: ANALYSIS_PIPELINE.md  BAYESIAN_VALIDATION.md  CHANGELOG.md  COMPLETE_ANALYSIS_PIPELINE.md  DEVELOPMENT.md  NASSAR_DATA_PROCESSING.md  PROJECT_STATUS.md  REORGANIZATION_VALIDATION.md
docs/methods/: bayesian_normative_model.md
envs/: __init__.py  neurogym_wrapper.py  pie_environment.py
model_params/: model_params_10.pth  model_params_15.pth  model_params_20.pth  model_params_20_heliFalse.pth  model_params_25.pth  model_params_30.pth  model_params_5.pth  pre_model_params_10_heliTrue.pth  pre_model_params_20_heliTrue.pth
nn4psych/: __init__.py
nn4psych/analysis/: behavior.py  (+1 more)
normative_model/: simple_normative_model.py
notebooks/: README.md
scripts/: analyze_hyperparams_unified.py  run_complete_analysis.py  run_local.py  slurm_circuit_ensemble.sh
state_data/: noheli_Falsepre_20md_10rs_64n_0.0001lr_0s.npz
tests/: test_diagnostics.py  test_imports.py  test_models.py  test_reduced_bayesian.py  test_task_compatibility.py
toy/: main.py  model.py  task.py
trained_models/: README.md
v1/: main_healthy.py  main_healthy_ff.py
v2/: pt_rnn_nocontext.py
validation/: conftest.py  test_parameter_recovery.py  test_reorganization.py
(+720 files in other folders)
