[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nn4psych"
version = "0.2.0"
description = "Neural Networks for Psychological Modeling - RNN Actor-Critic for Predictive Inference Tasks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NN4Psych Team"},
]
keywords = ["neural-networks", "psychology", "reinforcement-learning", "rnn", "actor-critic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "torch>=1.9.0",
    "gymnasium>=0.28.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=2.13",
]
bayesian = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpyro>=0.13.0",
    "arviz>=0.17.0,<0.25.0",
]
neurogym = [
    "neurogym @ git+https://github.com/neurogym/neurogym",
]
all = [
    "nn4psych[dev,bayesian,neurogym]",
]

[project.urls]
Homepage = "https://github.com/adammanoogian/nn4psych"
Repository = "https://github.com/adammanoogian/nn4psych"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nn4psych*"]
exclude = ["tests*", "archive*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]
"scripts/*" = ["D", "T201"]

[tool.pytest.ini_options]
testpaths = ["tests", "validation"]
python_files = ["test_*.py"]
addopts = "-v --cov=nn4psych --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
